--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,7 @@
-# Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Modules
 node_modules/
+package-lock.json
+yarn.lock
+yarn-error.log
 
-# Build
 src/prod
-
-# Other
 .DS_Store
