--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "main": "src/index.js",
     "scripts": {
         "dev": "webpack --mode development",
+        "dev:watch": "webpack --watch --progress --mode development",
         "prod": "export NODE_ENV=production && webpack --mode production"
     },
     "authors": [
@@ -27,6 +28,7 @@
     },
     "devDependencies": {
         "html-webpack-plugin": "^4.5.0",
-        "mini-css-extract-plugin": "^1.3.3"
+        "mini-css-extract-plugin": "^1.3.3",
+        "webpack-dev-server": "^3.11.1"
     }
 }
