--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "webpack-cli": "^4.3.1"
     },
     "devDependencies": {
+        "beautify-html-webpack-plugin": "^1.0.3",
         "html-webpack-plugin": "^4.5.0",
         "mini-css-extract-plugin": "^1.3.3",
         "webpack-dev-server": "^3.11.1"
